# sample-python-agent

./: AutoStarter.ini  README.md  bodyguard.py  bodyguard_buf.py  client.py  const.py  docker-compose.yaml  gameinfo.py  gamesetting.py  judge.py  medium.py  otsuki.py  packet.py  parareru.py  player.py  possessed.py  pyproject.toml  requirements.txt  sample.py  seer.py  start.py  utterance.py  villager.py  werewolf.py
aiwolfpy/: __init__.py  agentproxy.py  gameinfoparser.py  read_log.py
aiwolfpy/common/: base.py
aiwolfpy/protocol/: abstractcontent.py  contentfactory.py  contentfactory_test.py  contents.py  protocolparser.py  protocolparser_test.py
docker/: Dockerfile
test/AIWolf-ver0.6.4/: AutoStarter.bat  AutoStarter.sh  LogViewer.bat  LogViewer.sh  StartClient.bat  StartClient.sh  StartGUIClient.bat  StartGUIClient.sh  StartServer.bat  StartServer.sh
